--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Iwona Kolanowska",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.0.6",
     "json-server": "^0.15.1",
     "node-sass": "^4.13.1",
     "parcel-bundler": "^1.12.4",
