--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "json-server": "^0.15.1",
     "node-sass": "^4.13.1",
     "parcel-bundler": "^1.12.4",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "normalize.css": "^8.0.1"
   }
 }
