--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start:db": "json-server --watch database.json",
     "start:app": "parcel ./index.html --open",
+    "start:dev": "webpack-dev-server --mode-development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development"
@@ -24,7 +25,8 @@
     "parcel-bundler": "^1.12.4",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "jquery": "^3.4.1",
