Adjustment functionality for register form

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:dev": "webpack-dev-server --mode-development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development"
+    "build:dev": "webpack --mode=development",
+    "watch": "webpack --watch"
   },
   "keywords": [],
   "author": "Iwona Kolanowska",
