--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "start:db": "json-server --watch database.json --port 3004",
     "start:app": "parcel ./index.html --open",
     "start:dev": "webpack-dev-server --mode-development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "Iwona Kolanowska",
@@ -31,6 +33,8 @@
   },
   "dependencies": {
     "jquery": "^3.4.1",
+    "jsdom": "^16.2.1",
+    "nodemon": "^2.0.2",
     "normalize.css": "^8.0.1"
   }
 }
