--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
     "start:db": "json-server --watch database.json --port 3004",
     "start:app": "parcel ./index.html --open",
     "start:dev": "webpack-dev-server --mode-development",
@@ -32,6 +31,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "jsdom": "^16.2.1",
     "nodemon": "^2.0.2",
